1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objc-api.h: Use `externobjcvar' for external variables, 
	providing a default import if not set.
	Reformatting throughout.
	Remove objc_trace variable (not used).

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe-preface.h: Undef PACKAGE and VERSION before and after include
	of config.h.  Don't include sys/sigevent.h unless __hpux__ and
	HAVE_SYS_SIGEVENT_H.
	
1999-05-16  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* mframe-preface.h: Include string.h.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe-preface.h: For win32, disable include of windows.h and
	define of GNUSTEP_BASE_SOCKET_MESSAGE.

1999-05-08  Marcus Daniels <marcusd@asl.krasnow.gmu.edu>

	* mframe.foot (mframe_get_arg, mframe_set_arg): Declare typ
	if either MFRAME_STRUCT_BYREF or MYFRAME_FLT_IN_FRAME_AS_DBL.

1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe-preface.h: For HPUX, include sys/sigevent.h before stdarg.h and
	stdlib.h.

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (mframe.h): Depend on mframe-preface.h and prepend it.
	(This is to eliminate the need to install it.)
